# MaCalendar

./: Launch Calendar.command  README.md  SYSTEM.md  SYSTEM_IPHONE.md  SYSTEM_MAC.md  pyproject.toml
DOCUMENTATION/: CODE_MAP.md  NLU_TRACKING.md  SCENARIO_BUG.md  SYSTEM.md  SYSTEM_IPHONE.md  SYSTEM_MAC.md
MACalendar-iOS/MACalendar-iOS/: CourseStore.swift  Info.plist  LocalStore.swift  MACalendarApp.swift
MACalendar-iOS/MACalendar-iOS.xcodeproj/: project.pbxproj
MACalendar-iOS/MACalendar-iOS/API/: APIClient.swift  Models.swift
MACalendar-iOS/MACalendar-iOS/Settings/: AppSettings.swift
MACalendar-iOS/MACalendar-iOS/Views/: ContentView.swift  CourseworkView.swift  DayView.swift  EventDetailView.swift  MonthGridView.swift  SettingsView.swift  TaskRowView.swift  TasksView.swift  VoiceButton.swift  WeekView.swift
MACalendar-iOS/MACalendar-iOS/Voice/: SpeechPlayer.swift  VoiceRecorder.swift
assistant/: config.py  db.py  exceptions.py  hotkey.py  main.py  pipeline.py
assistant/actions/: __init__.py  clarify.py
assistant/actions/calendar/: action.py  intent.py
assistant/api/: __init__.py  __main__.py  audio_utils.py  server.py
assistant/audio/: capture.py
assistant/calendar_ui/: day_view.py  event_dialog.py  month_view.py  sidebar.py  styles.py  todo_view.py  week_view.py  window.py
assistant/intent/: context.py  parser.py  rule_parser.py
assistant/stt/: whisper_stt.py
tests/: conftest.py  test_ollama_parser.py  test_todo_parser.py
tests/integration/: test_ollama_intent.py
tests/unit/: test_intent_parser.py  test_rule_parser.py
(+6 files in other folders)
